crates/aranya-policy-compiler/tests/data/type_errors/emit_non_effect_invalid_type.fail.policy
command Foo {
    seal { return todo() }
    open { return todo() }
    policy {
        finish {
            emit 0
        }
    }
}
